# Illumination-as-Code

./: README.md  command.txt  terraform.tfstate
blinkt_raspi/: Cargo.toml  Dockerfile  README.md  compose.yml
blinkt_raspi/src/: lib.rs  main.rs
chroma_server/: Cargo.toml
chroma_server/src/: lib.rs  main.rs
compute_pi/: Cargo.toml  Dockerfile  compose.yml
compute_pi/.cargo/: config.toml
compute_pi/src/: lib.rs  main.rs
provisionar_test/: .terraform.lock.hcl  cloud_init.cfg  id_rsa  id_rsa.pub  main.tf  terraform.tfstate  terraform.tfstate.backup
simple/: id_rsa.pub  simple.tf  terraform.tfstate  terraform.tfstate.backup
simple/compute/: script.sh
terraform/: id_rsa  simple.tf  terraform.tfstate  terraform.tfstate.backup
terraform/compute/: script.sh
tf-kvm/: .gitignore  .terraform.lock.hcl  .terraform.tfstate.lock.info  cloud_init.cfg  compute.service  compute.sh  main.tf  main.tf.bak  terraform.tfstate  terraform.tfstate.backup
tf-kvm/compute/: pi.service  pi1.service  pi2.service  pi3.service  script.sh
tf-server/: Cargo.toml
tf-server/src/: .main.rs.swp  main.rs
