[package]
name = "blinkt_raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
blinkt = "0.7.1"
rand = "0.8.5"
reqwest = {version = "0.12.4",default-features = false, features = ["json","rustls-tls"]}
serde = {version = "1.0.203",features = ["derive"]}
serde_json = "1.0.117"
actix-web = "4.7.0"

[profile.release]
lto = true
